[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/themes/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/game_over.gd" type="Script" id=2]
[ext_resource path="res://music/MM_TT-GameOver.ogg" type="AudioStream" id=3]
[ext_resource path="res://menus/stage_select/MoveCursor.wav" type="AudioStream" id=4]
[ext_resource path="res://gui/sounds/Select.wav" type="AudioStream" id=5]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -36.0
margin_top = -4.0
margin_right = 36.0
margin_bottom = 4.0
text = "GAME OVER"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Buttons" type="VBoxContainer" parent="CenterContainer"]
margin_left = 104.0
margin_top = 108.0
margin_right = 280.0
margin_bottom = 131.0
custom_constants/separation = 7

[node name="ContinueButton" type="Button" parent="CenterContainer/Buttons"]
margin_right = 176.0
margin_bottom = 8.0
text = "Continue"

[node name="TitleScreenButton" type="Button" parent="CenterContainer/Buttons"]
margin_top = 15.0
margin_right = 176.0
margin_bottom = 23.0
text = "Return to Title Screen"

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MoveCursorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
